<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>com.pro-crafting</groupId>
    <artifactId>pc-parent</artifactId>
    <version>15</version>
  </parent>

  <groupId>com.pro-crafting.mc</groupId>
  <artifactId>wg-fight-plugin</artifactId>
  <version>0.13.2-SNAPSHOT</version>


  <scm>
    <connection>scm:git@github.com:pro-crafting/wg-fight-plugin.git</connection>
    <url>https://github.com/pro-crafting/wg-fight-plugin</url>
    <developerConnection>scm:git:git@github.com:pro-crafting/wg-fight-plugin.git</developerConnection>
    <tag>HEAD</tag>
  </scm>

  <properties>
    <maven.compiler.release>17</maven.compiler.release>
    <project.build.number>-</project.build.number>
    <project.build.version>${version} Build:${project.build.number}</project.build.version>

    <version.kit>0.3.1</version.kit>
    <version.blockgenerator>0.2.1</version.blockgenerator>
    <version.commandframework>0.3.0</version.commandframework>
    <version.common>0.3.0</version.common>

    <version.lombok>1.18.30</version.lombok>
    <version.spigot-api>1.20.2-R0.1-SNAPSHOT</version.spigot-api>
    <version.vault>1.7.3</version.vault>
    <version.bstats>3.0.2</version.bstats>
    <version.worldedit>7.2.18</version.worldedit>
  </properties>

  <repositories>
    <repository>
      <id>spigot-repo</id>
      <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
    </repository>
    <repository>
      <id>enginehub</id>
      <url>https://maven.enginehub.org/repo/</url>
    </repository>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>com.sk89q.worldedit</groupId>
      <artifactId>worldedit-bukkit</artifactId>
      <version>${version.worldedit}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.spigotmc</groupId>
      <artifactId>spigot-api</artifactId>
      <version>${version.spigot-api}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.github.MilkBowl</groupId>
      <artifactId>Vault</artifactId>
      <version>${version.vault}</version>
      <scope>provided</scope>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>org.bstats</groupId>
      <artifactId>bstats-bukkit</artifactId>
      <version>${version.bstats}</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>com.pro-crafting.mc</groupId>
      <artifactId>commandframework</artifactId>
      <version>${version.commandframework}</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>com.pro-crafting.mc</groupId>
      <artifactId>blockgenerator</artifactId>
      <version>${version.blockgenerator}</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>com.pro-crafting.mc</groupId>
      <artifactId>common</artifactId>
      <version>${version.common}</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>com.pro-crafting.mc</groupId>
      <artifactId>kit</artifactId>
      <version>${version.kit}</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>${version.lombok}</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <relocations>
                <relocation>
                  <pattern>org.bstats</pattern>
                  <shadedPattern>com.pro_crafting.mc.wg.metrics</shadedPattern>
                </relocation>
              </relocations>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <configuration>
          <allowTimestampedSnapshots>true</allowTimestampedSnapshots>
          <autoVersionSubmodules>true</autoVersionSubmodules>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
